--- a/index.html
+++ b/index.html
@@ -129,21 +129,21 @@
     <div class="grid">
       <section class="card">
         <h2>Ingredients</h2>
-        <p><strong>Pure Powdered Kava</strong></p>
+        <p><strong>Pure Powdered Kava (Piper methysticum)*Hand Cleaned*</strong></p> 
       </section>
 
       <section class="card">
         <h2>Traditional Method (How to Make)</h2>
         <ol>
           <li>Add <strong>1–2 spoons</strong> of kava powder into a strainer bag.</li>
-          <li>Place the bag in a bowl with <strong>2–3 cups</strong> warm water.</li>
+          <li>Place the bag in a bowl with <strong>2–3 cups</strong> water.</li>
           <li>Knead and squeeze for <strong>5–10 minutes</strong>.</li>
           <li>Serve and enjoy.</li>
         </ol>
       </section>
 
       <section class="card" style="grid-column: 1 / -1;">
-        <h2>Order & Payment</h2>
+        <h2>Payment</h2>
         <p>Zelle only to:</p>
         <p class="mono" style="margin-top:8px; font-size:16px;">kavaboyz03@gmail.com</p>
 
